# cvm

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
examples/: add  countdown.bc  sub  subtraction
parser/: arghandler.c  arghandler.h  argparser.c  argparser.h  carg_parser.c  carg_parser.h  parser.c  parser.h  putils.c  putils.h
vm/: bytecode.c  bytecode.h  flags.c  flags.h  instr.c  instr.h  main.c  safety.h  trace.c  trace.h  utils.h  vm.c  vm.h  vm_def.h  vmdef.h
